; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/msconfig_new/comctl32ex/extr_treeview.c_TreeView_GetLastFromItem.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/msconfig_new/comctl32ex/extr_treeview.c_TreeView_GetLastFromItem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @TreeView_GetLastFromItem(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  store i32* null, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  store i32* %7, i32** %6, align 8
  br label %8

8:                                                ; preds = %13, %2
  %9 = load i32*, i32** %6, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %8
  %12 = load i32*, i32** %6, align 8
  store i32* %12, i32** %5, align 8
  br label %13

13:                                               ; preds = %11
  %14 = load i32, i32* %3, align 4
  %15 = load i32*, i32** %6, align 8
  %16 = call i32* @TreeView_GetNextSibling(i32 %14, i32* %15)
  store i32* %16, i32** %6, align 8
  br label %8

17:                                               ; preds = %8
  %18 = load i32*, i32** %5, align 8
  ret i32* %18
}

declare dso_local i32* @TreeView_GetNextSibling(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
